# expy

./: .gitignore  README.md  pyproject.toml  todo.md
.github/workflows/: publish.yml
examples/: multi_sheet_sales_demo.py
src/expy/: __init__.py  _workbook.py  builders.py  nodes.py  render.py  styles.py  workbook.py
